force vertical scrollbar always on, avoids horizontal jumping of content if scrollbar is visible or not

--- a/gsn/webapp/style/gsn.css
+++ b/gsn/webapp/style/gsn.css
@@ -76,6 +76,8 @@ body, html
 
 body 
 {
+	overflow:scroll;
+	overflow-x:hidden;
 	min-width:750px;	
 	width: 100%; 
 	height: 100%; 
